# docuHub

./: README.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_user_documents.sql
backend/src/: main.rs
backend/src/controllers/: healthcheck.rs  mod.rs  recordControllers.rs
backend/src/schemas/: document_records.rs  mod.rs  presigned_url_schema.rs
backend/src/utils/: auth_helper.rs  mod.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/pages/: home-page.tsx  sign-in-page.tsx  upload-document-page.tsx  user-profile-page.tsx
frontend/src/components/ui/: DocuHubLogo.tsx  DownloadButton.tsx  aurora-background.tsx
frontend/src/lib/constants/: router.tsx
