[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
clerk-rs = "0.2.3"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
sqlx = {version = "0.6" ,features = ["postgres" , "runtime-tokio-rustls"]}
uuid = { version = "1.0", features = ["v4"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.38.0"
tokio = { version = "1", features = ["full"] }
